# not_saizeriya

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  dotenv.sample  help.txt  menu.json  menu_words.json  test.json  update.txt
src/: _commands.rs  commands.rs  generating.rs  main.rs  main_old.rs  support.rs
src/commands/: generating.rs  support.rs
src/commands/generating/components/: generate_random_num.rs  open_json_file.rs
src/generating/: components.rs
src/generating/components/: generate_random_num.rs
