[package]
name = "not_saizeriya"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.14"
poise = {git = "https://github.com/kangalioo/poise", rev = "aba9c83"}
thiserror = "1.0.30"
tokio = {version = "1.16.1", features = ["rt-multi-thread"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
rand = "0.6"